# gitandpip

./: README.md  setup.cfg
src/bbandpip.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gitandpip/: Jtk.py
src/gitandpip.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
