[metadata]
name = gitandpip
version = 0.0.1
author = Jeff Knight
author_email = jknight@arteric.com
description = Testing custom library from git
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Arteric-Jeff-Knight/gitandpip
project_urls =
    Bug Tracker = https://bitbucket.org/arteric/bbandpip/jira?statuses=new&statuses=indeterminate&sort=-updated&page=1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
